--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -12,6 +12,7 @@
     </p>
   </form>
   {% if result %}
+  <p class="well">Results for: <b>{{ server }}</b></p>
   <table class="table table-striped">
     <thead>
       <tr>
