--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,4 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h2>MetaPlace</h2>
-  <p>Information about the Marketplace gleaned from the API.</p>
-  <ul>
-    <li><a href="/build/">Build status</a></li>
-     <li><a href="/tiers/">Price tiers</a></li>
-  </ul>
+  <p>Information about the Marketplace gleaned from various sources.</p>
 {% endblock %}
