add in transactions

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,13 +21,9 @@
   <div class="container" style="padding-top: 60px;">
   {% block body %}
   {% endblock body %}
+  <p>Source on <a href="https://github.com/andymckay/metaplace/">github</a>.</p>
   </div>
 
-  <a href="http://github.com/andymckay/metaplace">
-    <img alt="Fork me on GitHub"
-    src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
-    style="position: absolute; top: 40px; right: 0; border: 0;"></img>
-  </a>
 </body>
 </html>
 
