add in some pretty

--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -6,7 +6,7 @@
     <a href="/tiers/prod/">Production</a>
   </p>
   {% if result %}
-  <p class="well">Results for: <b>{{ server }}</b></p>
+  <p class="alert">Results for: <b>{{ server }}</b></p>
   <table class="table table-striped">
     <thead>
       <tr>
