add in persona auth

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
           <li {% if request.path == '/builds/' %}class="active"{% endif %}><a href="/build/">Build status</a></li>
           <li {% if request.path.startswith('/tiers/') %}class="active"{% endif %}><a href="/tiers/">Price tiers</a></li>
           <li {% if request.path.startswith('/transactions/') %}class="active"{% endif %}><a href="/transactions/">Test transactions</a></li>
+          <li>{% if not session.email %}<a href="#" id="signin">Sign in</a>{% else %}<a href="#" id="signout">Sign out</a>{% endif %}</li>
         </ul>
       </div>
     </div>
@@ -22,7 +23,12 @@
   <div class="container" style="padding-top: 60px;">
   {% block body %}
   {% endblock body %}
+  <p>Logged in as: <span class="label" data-email="{{ session.email or '' }}" id="session-email">{{ session.email or 'Anonymous' }}</span>
+  {% if session.mozillian %}<span class="label label-success">Mozillian</span>{% endif %}</p>
   <p>Source on <a href="https://github.com/andymckay/metaplace/">github</a>.</p>
+  <script src="https://login.persona.org/include.js"></script>
+  <script src="/static/jquery-1.10.2.min.js"></script>
+  <script src="/static/static.js"></script>
   </div>
 
 </body>
