add in prod stats behind a whitelist

--- a/templates/403.html
+++ b/templates/403.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block body %}
   <h2>403</h2>
-  <pre>Not allowed, you must be log in as a Mozillian.</pre>
+  <pre>Not allowed, you must be log in as a certain Mozillian. Ask amckay@mozilla.com for access.</pre>
 {% endblock %}
