add in debug, make responsive

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block body %}
-  <p>Information about the Marketplace gleaned from various sources.</p>
+<p>Information about the Marketplace gleaned from various sources.</p>
+<p><button id="install" class="btn btn-success">Install app</button></p>
 {% endblock %}
