--- a/templates/template.html
+++ b/templates/template.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<link href="/static/bootstrap.css" rel="stylesheet">
+<link href="/static/bootstrap-responsive.css" rel="stylesheet">
 <title>MetaPlace</title>
 </head>
 <body>
