--- a/templates/debug.html
+++ b/templates/debug.html
@@ -1,9 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
-<h3>Debug app</h3>
 <form id="debug">
-  <label>Enter an app slug:</label>
-  <input type="text">
+  <label>Jump to app:</label>
+  <input type="text" placeholder="id or slug">
 </form>
 
 {% endblock %}
