--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -25,8 +25,10 @@
             <td>{{ tier.prices[id].currency }}&nbsp;{{ tier.prices[id].price }}
               <br>
               <span class="label {% if methods[tier.prices[id].method] == 'both' %}label-success{% else %}label-info{% endif %}">{{ methods[tier.prices[id].method] }}</span>
-              <span class="label {% if tier.prices[id].dev %}label-info{% endif %}">{% if tier.prices[id].dev %}dev{% endif %}</span>
-              <span class="label {% if tier.prices[id].paid %}label-important{% endif %}">{% if tier.prices[id].paid %}pay{% endif %}</span>
+              {% if tier.prices[id].dev and tier.prices[id].paid %}<span class="label label-success">paid</span>
+              {% elif tier.prices[id].dev and not tier.prices[id].paid %}<span class="label label-info">dev</span>
+              {% elif not tier.prices[id].dev and tier.prices[id].paid %}<span class="label label-warning">paid (not dev)</span>
+              {% endif %}
             </td>
             {% else %}
             <td>
