--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -46,6 +46,8 @@
         <th>Took (avg. {{ stats['mean'] }})</th>
         <th>Seller ID*</th>
         <th>Source</th>
+        <th>Carrier</th>
+        <th>Region</th>
       </tr>
     </thead>
     <tbody>
@@ -60,6 +62,8 @@
         <td>{% if row['diff'].days >= 0 %}{{ row['diff'] }}{% else %}0:00:00{% endif %}</td>
         <td>{{ row['seller'][:5] }}...</td>
         <td>{{ row['source'] }}</td>
+        <td>{{ row.get('carrier', '') }}</td>
+        <td>{{ row.get('region', '') }}</td>
       </tr>
       {% endfor %}
     </tbody>
