--- a/templates/tiers.html
+++ b/templates/tiers.html
@@ -22,7 +22,12 @@
           <td>{{ tier.name }}</td>
           {% for id in sorted %}
             {% if id in tier.prices %}
-            <td>{{ tier.prices[id].currency }}&nbsp;{{ tier.prices[id].price }}
+            <td>
+              {% if session.oauth %}
+                <a href="/tiers/{{ server }}/{{ tier.prices[id].id }}/">{{ tier.prices[id].currency }}&nbsp;{{ tier.prices[id].price }}</a>
+              {% else %}
+                {{ tier.prices[id].currency }}&nbsp;{{ tier.prices[id].price }}
+              {% endif %}
               <br>
               <span class="label {% if methods[tier.prices[id].method] == 'both' %}label-success{% else %}label-info{% endif %}">{{ methods[tier.prices[id].method] }}</span>
               {% if tier.prices[id].dev and tier.prices[id].paid %}<span class="label label-success">paid</span>
