--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,6 +29,7 @@
           <li {% if request.path.startswith('/tiers/') %}class="active"{% endif %}><a href="/tiers/">Price tiers</a></li>
           <li {% if request.path.startswith('/transactions/') %}class="active"{% endif %}><a href="/transactions/">Transactions</a></li>
           <li {% if request.path.startswith('/debug/') %}class="active"{% endif %}><a href="/debug/">Debug</a></li>
+          <li {% if request.path.startswith('/apikiosk/') %}class="active"{% endif %}><a href="/apikiosk/">API Speed</a></li>
           <li {% if request.path.startswith('/bugskiosk/') %}class="active"{% endif %}><a href="/bugskiosk/">Bugs Kiosk</a></li>
           <li>{% if not session.email %}<a href="#" id="signin">Sign in</a>{% else %}<a href="#" id="signout">Sign out</a>{% endif %}</li>
          </ul>
