new bootstrap and oauth token for multiple servers

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
   <link href="/static/bootstrap.css" rel="stylesheet">
-  <link href="/static/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/static/bootstrap-theme.css" rel="stylesheet">
+  <script src="/static/bootstrap.js"></script>
   <link href="/static/static.css" rel="stylesheet">
   <title>MetaPlace</title>
   <script src="/static/jquery-1.10.2.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block css %}
   {% endblock css %}
 </head>
 <body>
   {% block nav %}
-    <div class="navbar navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container">
-
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-         <span class="icon-bar"></span>
+    <nav class="navbar navbar-inverse" role="navigation">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
+          <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </a>
-
-        <a class="brand" href="/">Metaplace</a>
-
-        <div class="nav-collapse collapse">
-          <ul class="nav">
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Metaplace</a>
+      </div>
+      <div class="navbar-collapse collapse" id="nav">
+        <ul class="nav navbar-nav">
           <li {% if request.path == '/builds/' %}class="active"{% endif %}><a href="/build/">Build status</a></li>
           <li {% if request.path.startswith('/tiers/') %}class="active"{% endif %}><a href="/tiers/">Price tiers</a></li>
           <li {% if request.path.startswith('/transactions/') %}class="active"{% endif %}><a href="/transactions/">Transactions</a></li>
@@ -33,31 +33,27 @@
           <li {% if request.path.startswith('/bugskiosk/') %}class="active"{% endif %}><a href="/bugskiosk/">Bugs Kiosk</a></li>
           <li {% if request.path.startswith('/waffles/') %}class="active"{% endif %}><a href="/waffles/">Waffles</a></li>
           <li>{% if not session.email %}<a href="#" id="signin">Sign in</a>{% else %}<a href="#" id="signout">Sign out</a>{% endif %}</li>
-         </ul>
-       </div>
-
+        </ul>
       </div>
-    </div>
-  </div>
+    </nav>
   {% endblock nav %}
 
   <div class="container">
-  {% block body %}
-  {% endblock body %}
-  {% block footer %}
-  <hr>
-  <p>OAuth token {% if session.oauth %}<b><a href="/auth/oauth">stored</a></b>{% else %}<a href="/auth/oauth">not setup</a>{% endif %}.</p>
-  <p>Logged in as: <span class="label" data-email="{{ session.email or '' }}" id="session-email">{{ session.email or 'Anonymous' }}</span>
-  {% if session.mozillian %}<span class="label label-success">Mozillian</span>{% endif %}.</p>
-  <p>Source on <a href="https://github.com/andymckay/metaplace/">github</a>.</p>
-  {% endblock footer %}
-  <script src="https://login.persona.org/include.js"></script>
-  <script src="/static/bootstrap.js"></script>
-  <script src="/static/static.js"></script>
-  {% block js %}
-  {% endblock js %}
+    {% block body %}
+    {% endblock body %}
+    {% block footer %}
+      <hr>
+      <p>OAuth token {% if session.oauth %}<b><a href="/auth/oauth">stored</a></b>{% else %}<a href="/auth/oauth">not setup</a>{% endif %}.</p>
+      <p>Logged in as: <span class="label" data-email="{{ session.email or '' }}" id="session-email">{{ session.email or 'Anonymous' }}</span>
+      {% if session.mozillian %}<span class="label label-success">Mozillian</span>{% endif %}.</p>
+        <p>Source on <a href="https://github.com/andymckay/metaplace/">github</a>.</p>
+      {% endblock footer %}
+    <script src="https://login.persona.org/include.js"></script>
+    <script src="/static/bootstrap.js"></script>
+    <script src="/static/static.js"></script>
+    {% block js %}
+    {% endblock js %}
   </div>
-
 </body>
 </html>
 
