--- a/templates/tiers-edit.html
+++ b/templates/tiers-edit.html
@@ -1,27 +1,29 @@
 {% extends "layout.html" %}
 {% block body %}
   <h3>Alter price tier</h3>
+  <p>This price tier is on <b>{{ server }}</b>.</p>
   <h4>Current</h4>
   <pre>{{ tier }}</pre>
   <hr>
   <form method="post" role="form">
-    <fieldset>
       <legend>Change</legend>
-      <div class="formgroup">
-        <input type="checkbox" id="paid" name="paid" {% if tier.paid %}checked{% endif %}> Paid
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" id="paid" name="paid" {% if tier.paid %}checked{% endif %}> Paid
+        </label>
       </div>
-      <div class="formgroup">
-        <input type="checkbox" id="dev" name="dev" {% if tier.paid %}checked{% endif %}> Dev
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" id="dev" name="dev" {% if tier.paid %}checked{% endif %}> Dev
+        </label>
       </div>
-      <div class="formgroup">
+      <div class="form-group">
         <label for="method">Method</label>
-        <input value="{{ tier.method }}" id="method" name="method">
+        <input class="form-control" value="{{ tier.method }}" id="method" name="method">
         <label for="currency">Currency</label>
-        <input value="{{ tier.currency }}" id="currency" name="currency">
+        <input class="form-control" value="{{ tier.currency }}" id="currency" name="currency">
       </div>
-      <label></label>
-      <button type="submit" class="btn">Change</button>
-    </fieldset>
+      <button type="submit" class="btn btn-default">Change</button>
   </form>
 {% endblock %}
 
