--- a/static/apikiosk.css
+++ b/static/apikiosk.css
@@ -1,51 +1,33 @@
-.panel-body {
-    font-size: 8em;
-    line-height: normal; /* override bootstrap */
-    position: relative;
+tr {
+  border-bottom: 1px solid #ccc;
 }
 
-.panel-title {
-    font-size: 2em;
+#content {
+  font-size: 3em;
+  width: 100%;
+}
+
+#footnote {
+  float: right;
+  width: 50%;
+  color: #888;
+  padding: 5px 5px 5px 5px;
+}
+
+.danger {
+  color: red;
+}
+
+.note {
+  color: #888;
+  font-size: .3em;
+}
+
+.title {
+  padding-left: 40px;
 }
 
 .unit {
-    bottom: 20px;
-    color: #666;
-    float: right;
-    font-size: .4em;
-    position: absolute;
-    right: 20px;
+  color: #666;
+  font-size: .4em;
 }
-
-
-
-/* Everything below stolen from bootstrap 3.  When we upgrade delete all of this
- * and it will just work */
-*, *:before, *:after {
-    -moz-box-sizing: border-box;
-}
-.col-sm-4 {
-    width: 33.3333%;
-    float: left;
-    postion: relative;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-.panel {
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-    margin-bottom:20px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-}
-.panel-heading {
-    padding: 10px 15px;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-}
-.panel-title {
-    color: inherit;
-    font-weight: 500px;
-    line-height: 1.1;
-}
-/* End Bootstrap 3 thievery */
-
