--- a/templates/waffles.html
+++ b/templates/waffles.html
@@ -13,6 +13,7 @@
                   <th class="angle"><a href="https://marketplace-altdev.allizom.org/admin/models/waffle/">altdev</th>
                   <th class="angle"><a href="https://marketplace-dev.allizom.org/admin/models/waffle/">dev</a></th>
                   <th class="angle"><a href="https://marketplace.allizom.org/admin/models/waffle/">stage</a></th>
+                  <th class="angle"><a href="https://payments-alt.allizom.org/admin/models/waffle/">altpay</a></th>
                   <th class="angle"><a href="https://marketplace.firefox.com/admin/models/waffle/">prod</a></th>
               </tr>
           </thead>
