--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,9 +44,9 @@
     {% block footer %}
       <hr>
       <p>OAuth token {% if session.oauth %}<b><a href="/auth/oauth">stored</a></b>{% else %}<a href="/auth/oauth">not setup</a>{% endif %}.</p>
-      <p>Logged in as: <span class="label" data-email="{{ session.email or '' }}" id="session-email">{{ session.email or 'Anonymous' }}</span>
+      <p>Logged in as: <span class="label label-info" data-email="{{ session.email or '' }}" id="session-email">{{ session.email or 'Anonymous' }}</span>
       {% if session.mozillian %}<span class="label label-success">Mozillian</span>{% endif %}.</p>
-        <p>Source on <a href="https://github.com/andymckay/metaplace/">github</a>.</p>
+        <p>Source on <a href="https://github.com/andymckay/metaplace/">github</a></p>
       {% endblock footer %}
     <script src="https://login.persona.org/include.js"></script>
     <script src="/static/bootstrap.js"></script>
@@ -56,4 +56,3 @@
   </div>
 </body>
 </html>
-
